trunk/Archive2/a8/caf1e0b9f99692/output
main.cpp:7:21: error: friend function 'foo' is a protected member of 'Base'
  friend void Base::foo();
              ~~~~~~^
main.cpp:7:21: note: must name member using the type of the current context 'Derived'
1 error generated.
