trunk/Archive2/a8/caf1e0b9f99692/main.cpp
class Base {
protected:
  void foo() {}
};

struct Derived : public Base {
  friend void Base::foo();
};
  
int main() {
 
}